# Python_for_developers_final_task

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
src/: Dockerfile  entrypoint.sh
src/app/: database.py  main.py
src/app/api/v1/: auth.py  categories.py  category_api.py  comment_api.py  comments.py  misc.py  post_api.py  posts.py  subscription_api.py  subscriptions.py
src/app/configs/: app.py
src/app/models/: __init__.py  base.py  category.py  comment.py  media.py  post.py  refresh_token.py  subscription.py  user.py
src/app/repositories/: __init__.py  category.py  comment.py  posts.py  refresh_token.py  subscription.py  user.py
src/app/schemas/: category_schema.py  post_schema.py
src/app/services/: auth_service.py  category_service.py  comment_service.py  post_service.py  subscription_service.py
src/app/utils/: security.py
tests/: conftest.py  test_auth.py  test_categories.py  test_comments.py  test_posts.py  test_subscriptions.py
