[project]
name = "mfti-python-final"
version = "0.1.0"
description = "Итоговый проект по дисциплине 'Язык Python для разработчиков'"
authors = [
    { name = "Артур Чепурных"}
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0,<0.122.0",
    "uvicorn[standard]>=0.38.0,<0.39.0",
    "sqlalchemy>=2.0.44,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "python-multipart>=0.0.9,<0.1.0",
    "alembic>=1.17.1,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "dynaconf>=3.2.12,<4.0.0",
    "ruff>=0.14.3,<0.15.0",
    "mypy>=1.18.2,<2.0.0",
]

[tool.poetry]
package-mode = false
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"